# leonardo-3d-viewer

./: .coveragerc  LICENSE  MANIFEST.in  README.rst  setup.cfg
docs/source/: conf.py  index.rst
leonardo_3d_viewer/: __init__.py
leonardo_3d_viewer/static/js/: STLLoader.js
leonardo_3d_viewer/templates/widget/modelviewer/: default.html
leonardo_3d_viewer/widget/modelviewer/: models.py
tests/: local_settings.py
