[metadata]
name = leonardo-3d-viewer
summary = Extra media type for handling 3D models and related widgets.
description-file =
    README.rst
author = Michael Kutý
author-email = 6du1ro.n@gmail.com
home-page = https://github.com/leonardo-modules/leonardo-3d-viewer
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    leonardo_3d_viewer
